--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="card bg-dark text-white mt-3">
+  <div class="card-body">
+    <p class="text-center">TOCONAS, GASTON ENZO - LU 3247</p>
+  </div>
+</div>
